# apriltag_detector

./: CHANGELOG.rst  CMakeLists.txt  README.md  apriltag_detector.repos  apriltag_detector.rosinstall  package.xml
.github/workflows/: ci.yaml  main.yaml
apriltag_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
apriltag_detector/include/apriltag_detector/: apriltag_detector.hpp  detector.hpp  detector_component.hpp
apriltag_detector/launch/: detect.launch.py  detector.launch.py  detector_only.launch.py
apriltag_detector/src/: detector_component.cpp  detector_node.cpp
apriltag_detector_mit/: CHANGELOG.rst  CMakeLists.txt  README.md  apriltag_detector_mit.repos  package.xml  plugins.xml
apriltag_detector_mit/include/apriltag_detector_mit/: apriltag_detector.hpp  component.hpp  detector.hpp
apriltag_detector_mit/launch/: composable.launch.py  detector.launch.py
apriltag_detector_mit/src/: apriltag_detector.cpp  component.cpp  detector.cpp  node.cpp
apriltag_detector_umich/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  plugins.xml
apriltag_detector_umich/cmake/: ROS2.cmake
apriltag_detector_umich/include/apriltag_detector/: apriltag_detector_ros1.hpp  convert_detections.hpp  detector_wrapper_base.hpp  draw_tag.hpp
apriltag_detector_umich/include/apriltag_detector_umich/: apriltag_detector.hpp  component.hpp  convert_detections.hpp  detector.hpp  detector_impl.hpp  detector_wrapper.hpp  detector_wrapper_base.hpp  draw_msg.hpp  draw_tag.hpp
apriltag_detector_umich/launch/: detector.launch.py  node.launch  node.launch.py
apriltag_detector_umich/src/: apriltag_detector.cpp  component.cpp  convert_detections.cpp  detector.cpp  detector_impl.cpp  detector_wrapper.cpp  detector_wrapper_base.cpp  draw_tag.cpp  node.cpp  node_ros1.cpp  nodelet.cpp
apriltag_draw/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
apriltag_draw/include/apriltag_draw/: apriltag_draw.hpp
apriltag_draw/launch/: composable.launch.py  draw.launch.py
apriltag_draw/src/: apriltag_draw.cpp  node.cpp
apriltag_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
apriltag_tools/src/: detect_from_bag.cpp
cmake/: ROS1.cmake  ROS2.cmake
include/apriltag_detector/: apriltag_detector.hpp  apriltag_detector_ros1.hpp  apriltag_detector_ros2.hpp  common.hpp  detector_wrapper.hpp  detector_wrapper_base.hpp  draw_msg.hpp
launch/: composable.launch.py  node.launch.py  nodelet.launch
src/: apriltag_detector.cpp  apriltag_detector_ros1.cpp  apriltag_detector_ros2.cpp  common.cpp  detector_wrapper.cpp  detector_wrapper_base.cpp  draw_tag.cpp  node_ros1.cpp  node_ros2.cpp  nodelet.cpp
