<?xml version="1.0"?>
<package format="3">
  <name>apriltag_detector_umich</name>
  <version>1.0.0</version>
  <description>ROS package for apriltag detection with the UMich detector</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend> <!-- ROS_VERSION + ROS_DISTRO -->

  <depend>apriltag_detector</depend>
  <depend>apriltag</depend> <!-- the umich apriltag library -->
  <depend>apriltag_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <!-- this is crucial else the package will not be registered! -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
